--- a/HTML CSS/12 tema/index.html
+++ b/HTML CSS/12 tema/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <section> <!-- git -->
         <h2>Git and Hub</h2>
-        
     </section>
-    <section></section>
+    <section> <!-- Libraries ir Framework -->
+
+    </section>
     <section></section>
     <section></section>
 </body>
