--- a/HTML CSS/12 tema/index.html
+++ b/HTML CSS/12 tema/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sassStyle.scss">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -11,9 +12,61 @@
         <h2>Git and Hub</h2>
     </section>
     <section> <!-- Libraries ir Framework -->
+        <h3>css libs and fw</h3>
+        <ul>
+            <li>Bootstrap</li>
+            <li>Tailwind</li>
+            <li>Bulma</li>
+            <li>UI Kit</li>
+            <li>Materialize</li>
+            <li>Material Design Lite</li>
+            <li>Milligram</li>
+            <li>Foundation</li>
+            <li>ir daug daugiau</li>
+    </ul>
+    <div class="flex">
+        <div>
+            <h3>Pros</h3>
+            <ul>
+                <li>Pagreitina/palengvina darba</li>
+                <li>Nereikia rasyti CSS</li>
+                <li>Strukturizuota, aiski dokumentacija</li>
+                <li>Idiegtas responsiveness</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Cons</h3>
+            <ul>
+                <li>Prarandamas unikalumas</li>
+                <li>Perteklinis, nenaudojamas kodas</li>
+                <li>Prastesnis SEO vertinimas</li>
+                <li>Prarandami CSS igudziai</li>
+                <li>Sudetingiau pritaikyti savo stilius</li>
+                <li>Nesvarus HTML del klasiu pertekliaus</li>
+            </ul>
+        </div>
+    </div>
+    </section>
+    <section><!-- preprocessors -->
+        <h2>Preprocessors</h2>
+        <p>
+            suteikia galimybe rasyti ccs naujoviskesniu budu. Jame galima
+            lengvai ir patogiai kurti kintamuosius, nestinti, rasyti salygas, funkcijas,
+            ciklus, mixus ir t.t.
+        </p>
+        <p>
+            Naudojant betkuri css preprocesoriu reikia parasyta koda konvertuoti i paprasta css
+            kuri jau prijungiame prie svetaines
+        </p>
+        <h3>prprocesoriu sarasas</h3>
+        <ul>
+            <li>SCSS/SASS</li>
+            <li>LESS</li>
+            <li>Stylus</li>
+            <li>PostCSS</li>
+            <li>...</li>
+        </ul>
 
     </section>
-    <section></section>
-    <section></section>
 </body>
 </html>
